--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 							<div class="box">
 							<div class="box">
 								<div class="image fit">
-									<img src="images/pic01.png" alt="" />
+									<img src="images/smartimage.png" alt="" />
 								</div>
 								<div class="content">
 									<header class="align-center">
