--- a/index.html
+++ b/index.html
@@ -120,10 +120,7 @@
 				<div class="inner">
 					<header class="align-center">
 						<h2>ABOUT ME</h2>
-						<p>My name is Wambui Ng’ang’a a software developer and a Data Scientist in the make. 
-							I'm passionate about the tech industry, and the levels of innovation that can be
-							achieved through the STEM fields. This keeps my hunger growing, always trying to learn new methodologies, languages and tools. 
-							This makes me a flexible developer, adaptable to various roles.I am also a dog and </p>
+						<p> My name is Wambui Ng’ang’a, a software developer with a passion for Data Science. I am fascinated by the levels of innovation that can be achieved through the STEM fields. Always trying to learn new methodologies, languages, and tools. This makes me a flexible developer, adaptable to various roles. I love dogs and enjoy reading books.</p>
 						
 					</header>
 				</div>
