--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<div class="logo"><a href="index.html">Wambui <span>.Nganga</span></a></div>
+				<!-- <div class="logo"><a href="index.html">Wambui <span>.Nganga</span></a></div> -->
 				<a href="#menu">Menu</a>
 			</header>
 
@@ -120,7 +120,12 @@
 				<div class="inner">
 					<header class="align-center">
 						<h2>ABOUT ME</h2>
-						<p> My name is Wambui Ng’ang’a, a software developer with a passion for Data Science. I am fascinated by the levels of innovation that can be achieved through the STEM fields. Always trying to learn new methodologies, languages, and tools. This makes me a flexible developer, adaptable to various roles. I love dogs and enjoy reading books.</p>
+						<p> My name is Wambui Ng’ang’a, a 
+						software developer with a passion for Data Science. 
+						I am fascinated by the levels of innovation that can be 
+						achieved through the STEM fields. Always trying to learn new 
+						methodologies, languages, and tools. This makes me a flexible developer, 
+						adaptable to various roles. I love dogs and enjoy reading books.</p>
 						
 					</header>
 				</div>
