--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 						<div>
 							<div class="box">
 								<div class="image fit">
-									<img src="images/pic01.png alt="" />
+									<img src="images/takasmart.png" alt="" />
+								
 								</div>
 								<div class="content">
 									<header class="align-center">
