--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 				<div class="copyright">
 				<p>wambuinganga07@gmail.com<i class="arrow right"></i></p>	
 
-					&copy; WambuiNganga 2019. All rights reserved.
+					&copy; Wambuinganga 2020. All rights reserved.
 				</div>
 			</footer>
 
