--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 					<ul class="icons">
 						<li><a href="https://github.com/Wambuinganga" class="icon fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://www.linkedin.com/in/wambuinganga/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://twitter.com/ngangawambui_" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://twitter.com/lil_nganga" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						
 					</ul>
 				</div>
