--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<img src="images/slide02.png" alt="" />
 					<div class="inner">
 						<header>
-							<p>Python developer/Data scientist</p>
+							<p>Software Developer/Data scientist</p>
 						</header>
 					</div>
 				</article>
